[project]
name = "parcelfile"
version = "0.0.6"
authors = [
  { name="@malachi196", email="malachiaaronwilson@gmail.com" },
]
description = "Parcel does file command manipulation within python projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/malachi196/Parcelfile"